<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="top|center"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/press_on_the_button_with_same_"
			android:layout_margin="20dp"
			android:gravity="center"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/text"
			android:layout_margin="20dp"
			android:id="@+id/txt_number"
			android:freezesText="true"
			android:textSize="30sp"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_01"
			android:layout_margin="10dp"
			android:freezesText="true"
			android:id="@+id/button_01"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_02"
			android:freezesText="true"
			android:id="@+id/button_02"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/button_03"
			android:layout_margin="20dp"
			android:freezesText="true"
			android:id="@+id/button_03"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/speed_is"
			android:freezesText="true"
			android:id="@+id/txt_speed"/>

		<SeekBar
			android:layout_height="wrap_content"
			android:id="@+id/speed"
			android:minWidth="20dp"
			android:layout_marginRight="15dp"
			android:layout_marginLeft="15dp"
			android:max="2000"
			android:layout_width="match_parent"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="You win 0 Times, and loose 0 Times!"
			android:layout_margin="15dp"
			android:freezesText="true"
			android:id="@+id/txt_result"
			android:layout_marginBottom="5dp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="0"
			android:id="@+id/txt_time"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Reset"
			android:id="@+id/reset"/>

	</LinearLayout>

</ScrollView>

